--- a/wrestling vs site/index.html
+++ b/wrestling vs site/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <img src="images/nxt-uk-takeover-blackpool.jpg">
 
     <table>
       <caption>NXT UK Takeover Blackpool</caption>
